tests/snapshots/compiler_error_fixtures/row_effects__unsatisfied_row_subset_e422.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/row_effects/unsatisfied_row_subset_e422.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `run_needs_io_time`.

  examples/compiler_errors/row_effects/unsatisfied_row_subset_e422.flx:14:23
   |
 4 | fn run_needs_io_time(f: (() -> Int with IO, Time)) -> Int with IO, Time {
   | ----------------------------------------------------------------------- `run_needs_io_time` expects `() -> Int with IO, Time` as the 1st parameter
 5 |     f()
 6 | }
... |
12 | 
13 | fn main() with IO, Time {
14 |     run_needs_io_time(only_io)
   |                       ^^^^^^^
   |                       ------- this argument has type `() -> Int with Console, FileSystem, Stdin`

Note:
  expected argument type: () -> Int with IO, Time
  found argument type: () -> Int with Console, FileSystem, Stdin
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `() -> Int with IO, Time` value as the 1st argument.
== stdout ==
<not executed>
